# claude-usage-system-tray

./: .gitignore  README.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts
.github/workflows/: release.yml
src/: main.ts  settings.css  settings.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_spend.rs  http.rs  lib.rs  limits.rs  local_stats.rs  main.rs  pricing.rs  scheduler.rs  snapshot.rs  tray_icon.rs
src-tauri/tests/fixtures/: credentials.json  stats-cache.json  transcript.jsonl
